major Distribution redesign required to avoid invalid cache data; fixes #30.